--- a/public/client.css
+++ b/public/client.css
@@ -1,7 +1,14 @@
 body {
     margin: 0;
     padding: 0;
-    background-color: #1abc9c;
+    background: #76b852;
+    background: -webkit-linear-gradient(right, #76b852, #8DC26F);
+    background: -moz-linear-gradient(right, #76b852, #8DC26F); 
+    background: -o-linear-gradient(right, #76b852, #8DC26F);
+    background: linear-gradient(to left, #76b852, #8DC26F);
+    font-family: "Roboto", sans-serif;
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;      
 }
 
 h1.welcomeMsg {
@@ -21,14 +28,13 @@ h1.welcomeMsg {
     margin: 0 auto;
     padding: 10;
     background-color: #fff;
-    border-radius: 10px;
+    box-shadow: 0 0 20px 0 rgba(0, 0, 0, 0.2), 0 5px 5px 0 rgba(0, 0, 0, 0.24);
 }
 
 #messagesBox {
     background-color: #fff;
     height: 30em;
-    padding: 10px;
-    border-radius: 10px;
+    padding: 15px;
     display: flex;
     flex-flow: row wrap;
     align-items: flex-end;
@@ -52,20 +58,8 @@ h1.welcomeMsg {
     transition: 0.3s;
 }
 
-#message:active {
-    border-bottom: 1px solid #2f3542;
-    outline: 0;
-    outline-offset: 0;
-}
-
-#message:hover {
-    border-bottom: 1px solid #747d8c;
-    outline: 0;
-    outline-offset: 0;
-} 
-
-#message:focus {
-    border-bottom: 1px solid #2f3542;
+#message:active, #message:hover, #message:focus {
+    border-bottom: 1px solid black;
     outline: 0;
     outline-offset: 0;
 }
@@ -83,7 +77,7 @@ h1.welcomeMsg {
 
 #sendBtn:hover { 
     color: white;
-    background: #00b894; 
+    background: #76b852; 
     border: 2px;
     border-color: black;
     border-radius: 3px;
@@ -93,7 +87,7 @@ h1.welcomeMsg {
     border: 2px;
     border-color: black;
     border-radius: 3px;
-    background-color: #079992;
+    background: #43A047;
 }
 
 #sendBtn:focus {
